--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>2048游戏</title>
+    <title>玉米2048游戏</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>2048</h1>
+        <h1>玉米2048</h1>
         <div id="game-board" touch-action="none"></div>
         <button id="new-game">新游戏</button>
     </div>
@@ -21,7 +21,10 @@
         </div>
     </div>
     <div id="fireworks-container"></div>
-    <audio id="celebration-audio" src="celebration.mp3" preload="auto"></audio>
+    <audio id="celebration-audio-64" src="celebration.mp3" preload="auto"></audio>
+    <audio id="celebration-audio-512" src="yumi.mp3" preload="auto"></audio>
+    <audio id="yumijiayou-audio" src="yumijiayou.mp3" preload="auto"></audio>
+    <audio id="memeda-audio" src="memeda.mp3" preload="auto"></audio>
     <script src="script.js"></script>
 </body>
 </html>
