--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <h2 class="subtitle">FOR YUMIN❤️</h2>
         <h1>玉米2048</h1>
         <div id="game-board" touch-action="none"></div>
         <button id="new-game">新游戏</button>
